<package>
  <name>ros_apache2</name>
  <version>1.0.6</version>
  <description>ros_apache2</description>

  <license>BSD</license>

  <maintainer email="dave@cse.unr.edu">David Feil-Seifer</maintainer>
  <author email="dash@clearpathrobotics.com">Devon Ash</author>
  <buildtool_depend>catkin</buildtool_depend>

</package>
